3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Fix bug/exploit in setup command.  We were strcat'ing back data provided
by the client.
---
socket/request.c: Modify SetUp() to use safe_strcat() - eliminates buffer
   overflow issues.  Add some char* casts to spell/skill requestinfo
   to eliminate compiler warnings.  Add IP address to log for incoming
   connections.
MSW 2006-03-13

Fix possible exploit with shadow alchemy. Also improve the alchemy spell to
yield more nuggets.
---
server/shop.c: In query_cost() apply the hack (to multiply non-GEM/non-MONEY
   values by four) also if no player object is present.
Andreas Kirschbaum 2006-03-07

Add settings permanent_experience_percentage, death_penalty_percentage and
death_penalty_levels to the settings file.
---
common/living.c: don't hardcode exp calculations
common/init.c, include/config.h, lib/settings: set defaults for new  values
doc/settings: document new values
include/global.h: change settings struct to hold the new values
server/init.c: parse new values in the settings file.
server/skill_util.c: reference new value
Brendan Lally 2006-03-07

Apply modified parts of patch #1439490 (Fix in random map generation) by CF
Development Team Schmorp.de <crossfire@schmorp.de>.
---
random_maps/exit.c: In place_exits() check for a valid exit path before
   dereferencing it.
random_maps/treasure.c: In find_closest_monster() include monsters at map
   border. In find_enclosed_spot() prevent access to out of map tiles.
Andreas Kirschbaum 2006-03-04

Apply patch #1436833 (Patch for forked lightning crash at map borders) by CF
Development Team Schmorp.de <crossfire@schmorp.de>.
---